--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            
-        </title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/bootstrap-grid.css">
+        <link rel="stylesheet" href="css/bootstrap-reboot.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <title>ტესტ საიტი</title>
     </head>
     <body>
-        
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 bg-success">col-3</div>
+                    <div class="col-4 bg-danger">col-3</div>
+                    <div class="col-4 bg-warning">col-3</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
