--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/bootstrap-grid.css">
-        <link rel="stylesheet" href="css/bootstrap-reboot.css">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <title>ტესტ საიტი</title>
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4 bg-success">col-3</div>
-                    <div class="col-4 bg-danger">col-3</div>
-                    <div class="col-4 bg-warning">col-3</div>
-                </div>
-            </div>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="extrastyle/style.css">
+    <title>Read</title>
+</head>
+
+<body>
+    <div class="">
+        <div class="navbar navbar-light bg-light pb-0">
+            <a class="navbar-brand mt-1 navbrand-hovered" href="#">
+                <img src="images/Read.png" width="50" class="d-line-block align-top rounded-lg"></img>
+                <span class="display-4" style="font-family: 'Courier New', Courier, monospace;">ead</span>
+            </a>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
