--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="extrastyle/style.css">
+    <link rel="icon" href="images/Read.png">
     <title>Read</title>
 </head>
 
 <body>
     <div class="">
-        <div class="navbar navbar-light bg-light pb-0">
+        <div class="navbar navbar-expand-lg navbar-light bg-darklight pb-0">
             <a class="navbar-brand mt-1 navbrand-hovered" href="#">
-                <img src="images/Read.png" width="50" class="d-line-block align-top rounded-lg"></img>
-                <span class="display-4" style="font-family: 'Courier New', Courier, monospace;">ead</span>
+                <img src="images/Read.png" width="40" class="d-line-block align-top rounded-lg"></img>
+                <span class="display-4"
+                    style="font-family: 'Courier New', Courier, monospace;font-size: 45px;">ead</span>
             </a>
+
+            <button type="button" class="navbar navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
         </div>
     </div>
 </body>
