--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="">
         <div class="navbar navbar-expand-lg navbar-light bg-darklight pb-0">
             <a class="navbar-brand mt-1 navbrand-hovered" href="#">
-                <img src="images/Read.png" width="40" class="d-line-block align-top rounded-lg"></img>
-                <span class="display-4"
+                <img src="images/Read.png" class="d-line-block align-top rounded-lg navbrand-img"></img>
+                <span class="display-4 text-visible"
                     style="font-family: 'Courier New', Courier, monospace;font-size: 45px;">ead</span>
             </a>
 
