--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div class="navbar navbar-expand-lg navbar-light bg-darklight pb-0">
             <a class="navbar-brand mt-1 navbrand-hovered" href="#">
                 <img src="images/Read.png" class="d-line-block align-top rounded-lg navbrand-img"></img>
-                <span class="display-4 text-visible"
-                    style="font-family: 'Courier New', Courier, monospace;font-size: 45px;">ead</span>
+                <span class="display-4 navbrand-text">ead</span>
             </a>
 
             <button type="button" class="navbar navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
