--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="display-4 navbrand-text">ead</span>
             </a>
 
-            <button type="button" class="navbar navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
+            <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
