--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="">
         <div class="navbar navbar-expand-lg navbar-light bg-darklight pb-2">
             <a class="navbar-brand mt-1 navbrand-hovered" href="#">
-                <img src="images/Read.png" class="d-line-block align-top rounded-lg navbrand-img navbrand-img-vsm"></img>
+                <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text">ead</span>
             </a>
 
