--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="extrastyle/style.css">
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
     <link rel="icon" href="images/Read.png">
     <title>Read</title>
 </head>
 
 <body>
     <div class="">
-        <div class="navbar navbar-expand-lg navbar-light bg-darklight pb-2">
+        <nav class="navbar navbar-expand-lg navbar-light bg-darklight pb-1">
             <a class="navbar-brand mt-1 navbrand-hovered" href="#">
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
-                <span class="display-4 navbrand-text">ead</span>
+                <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
 
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
@@ -24,7 +35,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-        </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item nav-item-hovered">
+                        <a class="nav-link textCentered" href="#">Home</a>
+                    </li>
+                    <li class="nav-item nav-item-hovered">
+                        <a class="nav-link textCentered" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item nav-item-hovered">
+                        <a class="nav-link textCentered" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
 </body>
 
