--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item nav-item-hovered">
-                        <a class="nav-link textCentered" href="#">Home</a>
+                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center" href="#">Home</a>
                     </li>
-                    <li class="nav-item nav-item-hovered">
-                        <a class="nav-link textCentered" href="#">Contact</a>
+                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center" href="#">Contact</a>
                     </li>
-                    <li class="nav-item nav-item-hovered">
-                        <a class="nav-link textCentered" href="#">About</a>
+                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft borderRight border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center" href="#">About</a>
                     </li>
                 </ul>
             </div>
         </nav>
+
+
     </div>
 </body>
 
