--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft border-darklight navlinkCollapsed">
-                        <a class="nav-link text-center" href="#">Home</a>
+                <ul class="navbar-nav ml-auto bpgNino">
+                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center mt-2" href="#">მთავარი</a>
                     </li>
-                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft border-darklight navlinkCollapsed">
-                        <a class="nav-link text-center" href="#">Contact</a>
+                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center mt-2" href="#">კონტაქტი</a>
                     </li>
-                    <li class="nav-item nav-item-hovered px-lg-4 borderLeft borderRight border-darklight navlinkCollapsed">
-                        <a class="nav-link text-center" href="#">About</a>
+                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft borderRight border-darklight navlinkCollapsed">
+                        <a class="nav-link text-center mt-2" href="#">შესახებ</a>
                     </li>
                 </ul>
             </div>
