--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
     <link rel="icon" href="images/Read.png">
-    <title>Read</title>
+    <title>Read online | იკითხე ონლაინ</title>
 </head>
 
 <body>
     <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-darklight pb-1">
-            <a class="navbar-brand mt-1 navbrand-hovered" href="#">
+        <nav class="navbar navbar-expand-lg navbar-light bg-darklight pb-1 navbar-boxshadow">
+            <a class="navbar-brand mt-2 navbrand-hovered" href="#">
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
