--- a/index.html
+++ b/index.html
@@ -31,19 +31,38 @@
             </a>
 
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
-                data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                data-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto bpgNino">
-                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
                         <a class="nav-link text-center mt-2" href="#">მთავარი</a>
                     </li>
-                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsed">
+                    <li
+                        class="nav-item dropdown nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                        <a class="nav-link dropdown-toggle text-center mt-2" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">კატეგორია</a>
+                        <div class="dropdown-menu bg-darklight border-0 rounded-0 border-top border-darklight navlinkCollapsedtxtSize" aria-labelledby="navbarDropdownMenuLink-2">
+                            <a class="dropdown-item" href="#">სამეცნიერო</a>
+                            <a class="dropdown-item" href="#">საგამომძიებლო</a>
+                            <a class="dropdown-item" href="#">რომანტიკული</a>
+                            <a class="dropdown-item" href="#">მუსიკალური</a>
+                            <a class="dropdown-item" href="#">ხელოვნება</a>
+                            <a class="dropdown-item" href="#">საბავშვო</a>
+                            <a class="dropdown-item" href="#">ფენტეზი</a>
+                            <a class="dropdown-item" href="#">ისტორიული</a>
+                            <a class="dropdown-item" href="#">ბიოგრაფიული</a>
+                        </div>
+                    </li>
+                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
                         <a class="nav-link text-center mt-2" href="#">კონტაქტი</a>
                     </li>
-                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft borderRight border-darklight navlinkCollapsed">
+                    <li
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft borderRight border-darklight navlinkCollapsedtxtSize-2">
                         <a class="nav-link text-center mt-2" href="#">შესახებ</a>
                     </li>
                 </ul>
