--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto bpgNino">
-                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                    <li
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
                         <a class="nav-link text-center mt-2" href="#">მთავარი</a>
                     </li>
                     <li
@@ -46,7 +47,8 @@
                         <a class="nav-link dropdown-toggle text-center mt-2" href="#" id="navbarDropdownMenuLink"
                             role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">კატეგორია</a>
-                        <div class="dropdown-menu bg-darklight border-0 rounded-0 border-top border-darklight navlinkCollapsedtxtSize" aria-labelledby="navbarDropdownMenuLink-2">
+                        <div class="dropdown-menu bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
+                            aria-labelledby="navbarDropdownMenuLink-2">
                             <a class="dropdown-item" href="#">სამეცნიერო</a>
                             <a class="dropdown-item" href="#">საგამომძიებლო</a>
                             <a class="dropdown-item" href="#">რომანტიკული</a>
@@ -58,7 +60,8 @@
                             <a class="dropdown-item" href="#">ბიოგრაფიული</a>
                         </div>
                     </li>
-                    <li class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                    <li
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
                         <a class="nav-link text-center mt-2" href="#">კონტაქტი</a>
                     </li>
                     <li
