--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                         <a class="nav-link dropdown-toggle text-center mt-2" href="#" id="navbarDropdownMenuLink"
                             role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">კატეგორია</a>
-                        <div class="dropdown-menu bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
+                        <div class="dropdown-menu navbarWidth bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
                             aria-labelledby="navbarDropdownMenuLink-2">
-                            <a class="dropdown-item" href="#">სამეცნიერო</a>
-                            <a class="dropdown-item" href="#">საგამომძიებლო</a>
-                            <a class="dropdown-item" href="#">რომანტიკული</a>
-                            <a class="dropdown-item" href="#">მუსიკალური</a>
-                            <a class="dropdown-item" href="#">ხელოვნება</a>
-                            <a class="dropdown-item" href="#">საბავშვო</a>
-                            <a class="dropdown-item" href="#">ფენტეზი</a>
-                            <a class="dropdown-item" href="#">ისტორიული</a>
-                            <a class="dropdown-item" href="#">ბიოგრაფიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">სამეცნიერო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">საგამომძიებლო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">რომანტიკული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">მუსიკალური</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ხელოვნება</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">საბავშვო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ფენტეზი</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ისტორიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ბიოგრაფიული</a>
                         </div>
                     </li>
                     <li
