--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ფენტეზი</a>
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ისტორიული</a>
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ბიოგრაფიული</a>
+                            <hr>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ქართული ზღაპრები</a>
                         </div>
                     </li>
                     <li
