--- a/index.html
+++ b/index.html
@@ -39,35 +39,35 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto bpgNino">
                     <li
-                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2 navlink-sign -lg">
                         <a class="nav-link text-center mt-2" href="#">მთავარი</a>
                     </li>
                     <li
-                        class="nav-item dropdown nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                        class="nav-item dropdown nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2 navlink-sign">
                         <a class="nav-link dropdown-toggle text-center mt-2" href="#" id="navbarDropdownMenuLink"
                             role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">კატეგორია</a>
                         <div class="dropdown-menu navbarWidth bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
                             aria-labelledby="navbarDropdownMenuLink-2">
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">სამეცნიერო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">საგამომძიებლო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">რომანტიკული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">მუსიკალური</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ხელოვნება</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">საბავშვო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ფენტეზი</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ისტორიული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ბიოგრაფიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign -lg" href="#">სამეცნიერო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">საგამომძიებლო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">რომანტიკული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">მუსიკალური</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ხელოვნება</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">საბავშვო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ფენტეზი</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ისტორიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ბიოგრაფიული</a>
                             <hr>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered" href="#">ქართული ზღაპრები</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ქართული ზღაპრები</a>
                         </div>
                     </li>
                     <li
-                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2">
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2 navlink-sign">
                         <a class="nav-link text-center mt-2" href="#">კონტაქტი</a>
                     </li>
                     <li
-                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft borderRight border-darklight navlinkCollapsedtxtSize-2">
+                        class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft borderRight border-darklight navlinkCollapsedtxtSize-2 navlink-sign">
                         <a class="nav-link text-center mt-2" href="#">შესახებ</a>
                     </li>
                 </ul>
