--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                             aria-expanded="false">კატეგორია</a>
                         <div class="dropdown-menu navbarWidth bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
                             aria-labelledby="navbarDropdownMenuLink-2">
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign -lg" href="#">სამეცნიერო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">საგამომძიებლო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">რომანტიკული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">მუსიკალური</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ხელოვნება</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">საბავშვო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ფენტეზი</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ისტორიული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ბიოგრაფიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">სამეცნიერო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">საგამომძიებლო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">რომანტიკული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">მუსიკალური</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ხელოვნება</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">საბავშვო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ფენტეზი</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ისტორიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ბიოგრაფიული</a>
                             <hr>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign sm" href="#">ქართული ზღაპრები</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ქართული ზღაპრები</a>
                         </div>
                     </li>
                     <li
