--- a/index.html
+++ b/index.html
@@ -50,17 +50,27 @@
                             aria-expanded="false">კატეგორია</a>
                         <div class="dropdown-menu navbarWidth bg-darklight rounded-0 mt-0 ml-0 navbar-boxshadow border-darklight navlinkCollapsedtxtSize"
                             aria-labelledby="navbarDropdownMenuLink-2">
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">სამეცნიერო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">საგამომძიებლო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">რომანტიკული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">მუსიკალური</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ხელოვნება</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">საბავშვო</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ფენტეზი</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ისტორიული</a>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ბიოგრაფიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">სამეცნიერო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">საგამომძიებლო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">რომანტიკული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">მუსიკალური</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">ხელოვნება</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">საბავშვო</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">ფენტეზი</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">ისტორიული</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
+                                href="#">ბიოგრაფიული</a>
                             <hr>
-                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ქართული ზღაპრები</a>
+                            <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign" href="#">ქართული
+                                ზღაპრები</a>
                         </div>
                     </li>
                     <li
@@ -75,7 +85,33 @@
             </div>
         </nav>
 
+        <div class="container-fluid bg-dark py-3" height="400" width="400">
+            <div class="row col-12 bpgNino">
+                <div class="col-12 topBooksLeft">
 
+                    <div class="list-group col-2 text-center mb-2 cursorPointer">
+                        <li class="list-group-item"><strong>ტოპ წიგნები</strong></li>
+                    </div>
+
+                    <div class="list-group col-2">
+                        <a class="list-group-item list-group-item-action lgi-px" href="#">
+                            <img class="img-thumbnail" src="images/Articles/Hobbit1.jpg" alt="">
+                            ჰობიტი: მოულოდნელი მოგზაურობა
+                        </a>
+                        <a class="list-group-item list-group-item-action lgi-px" href="#">
+                            <img class="img-thumbnail" src="images/Articles/Hobbit2.jpg" alt="">
+                            ჰობიტი: სმაუგის ნაოხარი
+                        </a>
+                        <a class="list-group-item list-group-item-action lgi-px" href="#">
+                            <img class="img-thumbnail" src="images/Articles/Hobbit2.jpg" alt="">
+                            ჰობიტი: ხუთი არმიის ბრძოლა
+                        </a>
+                    </div>
+
+                </div>
+                somesomesome
+            </div>
+        </div>
     </div>
 </body>
 
