--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-darklight pb-1 navbar-boxshadow">
+        <nav class="navbar navbar-expand-lg navbar-light bg-darklight pb-1 navbar-boxshadow sticky-top">
             <a class="navbar-brand mt-2 navbrand-hovered" href="#">
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text text-dark">ead</span>
@@ -86,8 +86,8 @@
         </nav>
 
         <div class="container-fluid bg-dark py-3" height="400" width="400">
-            <div class="row col-12 bpgNino">
-                <div class="col-12 topBooksLeft">
+            <div class="row col-12">
+                <div class="col-12 topBooksLeft bpgNino">
 
                     <div class="list-group col-2 text-center mb-2 cursorPointer">
                         <li class="list-group-item"><strong>ტოპ წიგნები</strong></li>
@@ -107,9 +107,9 @@
                             ჰობიტი: ხუთი არმიის ბრძოლა
                         </a>
                     </div>
-
+                    
                 </div>
-                somesomesome
+                
             </div>
         </div>
     </div>
