--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         <div class="container-fluid bg-dark py-4">
             <div class="row col-12">
-
+                
+                <!--TOPBOOKS-->
                 <div class="col-2 topBooksLeft bpgNino">
 
                     <div class="list-group text-center mb-2 cursorPointer">
@@ -111,8 +112,95 @@
 
                 </div>
 
-                <div class="col-7 rounded bg-light">
-                    
+                <!--POSTS-->
+                <div class="col-7 rounded bg-light px-4 py-3 ml-3">
+
+                    <div class="row row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
+                                    მოგზაურობა</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
+                    <div class="row row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit2.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
+                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit3.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: ხუთი არმიის ბრძოლა</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
+                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
+                                    მოგზაურობა</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
+                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit2.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
+                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit3.jpg">
+                        <div class="media-body bpgNino">
+                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: ხუთი არმიის ბრძოლა</strong></a>
+                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
+                                იქნებოდა
+                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
+                                ვიდრე
+                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
+                                ახლიდან
+                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
