--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
 
                 <!--POSTS-->
-                <div class="col-7 rounded bg-light px-4 py-3 ml-3">
+                <div class="col-lg-7 col-md-12 rounded bg-light px-4 py-3 ml-3">
 
                     <div class="row row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
