--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
-
+            <p class="lead bpgNino offset-1 mt-4" style="font-size: 14px;">უფასო ელ-წიგნების ბიბლიოთეკა</p>
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
                 data-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -87,7 +87,7 @@
 
         <div class="container-fluid bg-dark py-4">
             <div class="row col-12">
-                
+
                 <!--TOPBOOKS-->
                 <div class="col-2 topBooksLeft bpgNino">
 
@@ -159,10 +159,10 @@
                     </div>
 
                     <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
-                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/lotr1.jpg">
                         <div class="media-body bpgNino">
-                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
-                                    მოგზაურობა</strong></a>
+                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ბეჭდის
+                                    საძმო</strong></a>
                             <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
                                 იქნებოდა
                                 თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
