--- a/index.html
+++ b/index.html
@@ -121,12 +121,9 @@
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
                                     მოგზაურობა</strong></a>
                             <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                                იქნებოდა თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან
+                                უარესები, ვიდრე ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები
+                                გვესწავლა და ახლიდან დაგვეწყო კაცობრიობის თავგადასავალი.</p>
                         </div>
                     </div>
 
@@ -135,12 +132,9 @@
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
                             <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                                იქნებოდა თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან
+                                უარესები, ვიდრე ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები
+                                გვესწავლა და ახლიდან დაგვეწყო კაცობრიობის თავგადასავალი.</p>
                         </div>
                     </div>
 
@@ -149,12 +143,9 @@
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: ხუთი არმიის ბრძოლა</strong></a>
                             <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                                იქნებოდა თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან
+                                უარესები, ვიდრე ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები
+                                გვესწავლა და ახლიდან დაგვეწყო კაცობრიობის თავგადასავალი.</p>
                         </div>
                     </div>
 
@@ -163,41 +154,29 @@
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ბეჭდის
                                     საძმო</strong></a>
-                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                            <p>უნიკალური ჯადოქრული სამყაროს შემქმნელი მწერლის, მთელ მსოფლიოში უპოპულარულესი წიგნების
+                                ავტორის ჯონ რონალდ რუელ ტოლკინის 6-ტომეული ქართველი მკითხველის ბიბლიოთეკას რომანებით –
+                                „სილმარილიონი“, „ჰობიტი“, ტრილოგიით – „ბეჭდების მბრძანებელი“ გაამდიდრებს.</p>
                         </div>
                     </div>
 
                     <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
-                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit2.jpg">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/lotr2.jpg">
                         <div class="media-body bpgNino">
-                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
-                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ორი ციხე სიმაგრე</strong></a>
+                            <p>უნიკალური ჯადოქრული სამყაროს შემქმნელი მწერლის, მთელ მსოფლიოში უპოპულარულესი წიგნების
+                                ავტორის ჯონ რონალდ რუელ ტოლკინის 6-ტომეული ქართველი მკითხველის ბიბლიოთეკას რომანებით –
+                                „სილმარილიონი“, „ჰობიტი“, ტრილოგიით – „ბეჭდების მბრძანებელი“ გაამდიდრებს.</p>
                         </div>
                     </div>
 
                     <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
-                        <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit3.jpg">
+                        <img class="img-fluid postImage mr-3" src="images/Articles/lotr3.jpg">
                         <div class="media-body bpgNino">
-                            <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: ხუთი არმიის ბრძოლა</strong></a>
-                            <p>რომ არ ყოფილიყო ტოლკინი, რომ არ არსებულიყო ზღაპარი, რომელიც სულაც არ არის ზღაპარი –
-                                იქნებოდა
-                                თუ არა სამყარო ისეთი, როგორიც არის? ვიქნებოდით თუ არა ჩვენ უფრო უკეთესები ან უარესები,
-                                ვიდრე
-                                ვართ? მართლაც კარგი იქნებოდა, ეს ზღაპარი გვექცია ცხადად, ახალი ენები გვესწავლა და
-                                ახლიდან
-                                დაგვეწყო კაცობრიობის თავგადასავალი.</p>
+                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ხელმწიფის დაბრუნება</strong></a>
+                            <p>უნიკალური ჯადოქრული სამყაროს შემქმნელი მწერლის, მთელ მსოფლიოში უპოპულარულესი წიგნების
+                                ავტორის ჯონ რონალდ რუელ ტოლკინის 6-ტომეული ქართველი მკითხველის ბიბლიოთეკას რომანებით –
+                                „სილმარილიონი“, „ჰობიტი“, ტრილოგიით – „ბეჭდების მბრძანებელი“ გაამდიდრებს.</p>
                         </div>
                     </div>
 
