--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
-            <p class="lead bpgNino offset-1 mt-4" style="font-size: 14px;">უფასო ელ-წიგნების ბიბლიოთეკა</p>
+            <p class="lead bpgNino offset-lg-1 mt-4 navbarTFsize">უფასო ელ-წიგნების ბიბლიოთეკა</p>
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
                 data-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
