--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                     <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/lotr2.jpg">
                         <div class="media-body bpgNino">
-                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ორი ციხე სიმაგრე</strong></a>
+                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ორი ციხე
+                                    სიმაგრე</strong></a>
                             <p>უნიკალური ჯადოქრული სამყაროს შემქმნელი მწერლის, მთელ მსოფლიოში უპოპულარულესი წიგნების
                                 ავტორის ჯონ რონალდ რუელ ტოლკინის 6-ტომეული ქართველი მკითხველის ბიბლიოთეკას რომანებით –
                                 „სილმარილიონი“, „ჰობიტი“, ტრილოგიით – „ბეჭდების მბრძანებელი“ გაამდიდრებს.</p>
@@ -173,12 +174,27 @@
                     <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/lotr3.jpg">
                         <div class="media-body bpgNino">
-                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ხელმწიფის დაბრუნება</strong></a>
+                            <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ხელმწიფის
+                                    დაბრუნება</strong></a>
                             <p>უნიკალური ჯადოქრული სამყაროს შემქმნელი მწერლის, მთელ მსოფლიოში უპოპულარულესი წიგნების
                                 ავტორის ჯონ რონალდ რუელ ტოლკინის 6-ტომეული ქართველი მკითხველის ბიბლიოთეკას რომანებით –
                                 „სილმარილიონი“, „ჰობიტი“, ტრილოგიით – „ბეჭდების მბრძანებელი“ გაამდიდრებს.</p>
                         </div>
                     </div>
+
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item disabled">
+                                <a class="page-link text-dark" href="#" tabindex="-1" aria-disabled="true">უკან</a>
+                            </li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link text-dark" href="#">წინ</a>
+                            </li>
+                        </ul>
+                    </nav>
 
                 </div>
 
