--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <img src="images/Read.png" class="d-line-block align-top navbrand-img"></img>
                 <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
+
             <p class="lead bpgNino offset-lg-1 mt-4 navbarTFsize">უფასო ელ-წიგნების ბიბლიოთეკა</p>
+
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
                 data-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -195,6 +197,30 @@
                             </li>
                         </ul>
                     </nav>
+
+                </div>
+
+                <div class="col rounded ml-3">
+                    <div class="bg-light rounded px-2 py-2 bpgNino">
+                        <form>
+                            <h5><strong>ავტორიზაცია</strong></h5>
+                            <hr style="margin-top: 0rem;">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">მეილი</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">პაროლი</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    aria-describedby="emailHelp">
+                            </div>
+
+                            <button type="submit" class="btn btn-dark">შესვლა</button>
+                            <a class="navbar-brand navbarTFsize ml-5" href="#">რეგისტრაცია</a>
+                        </form>
+                    </div>
 
                 </div>
 
