--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 
                     <div class="list-group">
                         <a class="list-group-item list-group-item-action lgi-px" href="#">
-                            <img class="img-thumbnail" src="images/Articles/Hobbit1.jpg" alt="">
+                            <img class="img-thumbnail thumbImage" src="images/Articles/Hobbit1.jpg" alt="">
                             ჰობიტი: მოულოდნელი მოგზაურობა
                         </a>
                         <a class="list-group-item list-group-item-action lgi-px" href="#">
-                            <img class="img-thumbnail" src="images/Articles/Hobbit2.jpg" alt="">
+                            <img class="img-thumbnail thumbImage" src="images/Articles/Hobbit2.jpg" alt="">
                             ჰობიტი: სმაუგის ნაოხარი
                         </a>
                         <a class="list-group-item list-group-item-action lgi-px" href="#">
-                            <img class="img-thumbnail" src="images/Articles/Hobbit2.jpg" alt="">
+                            <img class="img-thumbnail thumbImage" src="images/Articles/Hobbit2.jpg" alt="">
                             ჰობიტი: ხუთი არმიის ბრძოლა
                         </a>
                     </div>
@@ -207,13 +207,13 @@
                             <hr style="margin-top: 0rem;">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">მეილი</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                <input type="email" class="form-control" style="max-width: 300px;" id="exampleInputEmail1"
                                     aria-describedby="emailHelp">
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleInputPassword1">პაროლი</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                <input type="password" class="form-control" style="max-width: 300px;" id="exampleInputPassword1"
                                     aria-describedby="emailHelp">
                             </div>
 
