--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 </div>
 
-                <div class="col rounded ml-3">
+                <div class="col rounded ml-3 registrationMain">
                     <div class="bg-light rounded px-2 py-2 bpgNino">
                         <form>
                             <h5><strong>ავტორიზაცია</strong></h5>
