--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="display-4 navbrand-text text-dark">ead</span>
             </a>
 
-            <p class="lead bpgNino offset-lg-1 mt-4 navbarTFsize">უფასო ელ-წიგნების ბიბლიოთეკა</p>
+            <p class="lead bpgNino mt-4 mr-5 navbarTFsize navTextHidden1">უფასო ელ-წიგნების ბიბლიოთეკა</p>
 
             <button type="button" class="navbar navbar-toggler nav-toggler-lg" data-toggle="collapse"
                 data-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false"
@@ -41,6 +41,9 @@
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto bpgNino">
+
+                    <p class="lead bpgNino mt-4 offset-fromRight navbarTFsize navTextHidden2">უფასო ელ-წიგნების ბიბლიოთეკა</p>
+
                     <li
                         class="nav-item nav-item-hovered py-2 px-lg-4 borderLeft border-darklight navlinkCollapsedtxtSize-2 navlink-sign -lg">
                         <a class="nav-link text-center mt-2" href="#">მთავარი</a>
@@ -207,14 +210,14 @@
                             <hr style="margin-top: 0rem;">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">მეილი</label>
-                                <input type="email" class="form-control" style="max-width: 300px;" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                <input type="email" class="form-control" style="max-width: 300px;"
+                                    id="exampleInputEmail1" aria-describedby="emailHelp">
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleInputPassword1">პაროლი</label>
-                                <input type="password" class="form-control" style="max-width: 300px;" id="exampleInputPassword1"
-                                    aria-describedby="emailHelp">
+                                <input type="password" class="form-control" style="max-width: 300px;"
+                                    id="exampleInputPassword1" aria-describedby="emailHelp">
                             </div>
 
                             <button type="submit" class="btn btn-dark">შესვლა</button>
