--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
                                 href="#">სამეცნიერო</a>
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
-                                href="#">საგამომძიებლო</a>
+                                href="#">დეტექტივი</a>
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
                                 href="#">რომანტიკული</a>
                             <a class="dropdown-item nav-item-hovered navitem-p-hovered navlink-sign"
@@ -96,12 +96,12 @@
                 <!--TOPBOOKS-->
                 <div class="col-2 topBooksLeft bpgNino">
 
-                    <div class="list-group text-center mb-2 cursorPointer">
-                        <li class="list-group-item fixedSign"><strong>ტოპ წიგნები</strong></li>
+                    <div class="list-group rounded-0 rounded-top text-center border-0 cursorPointer">
+                        <li class="list-group-item fixedSign" style="border-radius: 5px 5px 0 0;"><strong>ტოპ წიგნები</strong></li>
                     </div>
 
-                    <div class="list-group">
-                        <a class="list-group-item list-group-item-action lgi-px" href="#">
+                    <div class="list-group" >
+                        <a class="list-group-item list-group-item-action lgi-px border-top-0" style="border-radius: 0 0 ;" href="#">
                             <img class="img-thumbnail thumbImage" src="images/Articles/Hobbit1.jpg" alt="">
                             ჰობიტი: მოულოდნელი მოგზაურობა
                         </a>
@@ -118,9 +118,9 @@
                 </div>
 
                 <!--POSTS-->
-                <div class="col-lg-7 col-md-12 rounded bg-light px-4 py-3 ml-3">
+                <div class="col-lg-7 col-md-12 rounded-0 bg-light px-4 py-3 ml-3">
 
-                    <div class="row row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
@@ -132,7 +132,7 @@
                         </div>
                     </div>
 
-                    <div class="row row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit2.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit3.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: ხუთი არმიის ბრძოლა</strong></a>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
 
-                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/lotr1.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ბეჭდის
@@ -165,7 +165,7 @@
                         </div>
                     </div>
 
-                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/lotr2.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ორი ციხე
@@ -176,7 +176,7 @@
                         </div>
                     </div>
 
-                    <div class="row media mb-3 rounded-lg navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/lotr3.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ბეჭდების მბრძანებელი: ხელმწიფის
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="col rounded ml-3 registrationMain">
-                    <div class="bg-light rounded px-2 py-2 bpgNino">
+                    <div class="bg-light rounded-0 px-2 py-2 bpgNino">
                         <form>
                             <h5><strong>ავტორიზაცია</strong></h5>
                             <hr style="margin-top: 0rem;">
