--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="col-2 topBooksLeft bpgNino">
 
                     <div class="list-group rounded-0 rounded-top text-center border-0 cursorPointer">
-                        <li class="list-group-item fixedSign" style="border-radius: 5px 5px 0 0;"><strong>ტოპ წიგნები</strong></li>
+                        <li class="list-group-item fixedSign bg-light" style="border-radius: 5px 5px 0 0;"><strong>ტოპ წიგნები</strong></li>
                     </div>
 
                     <div class="list-group" >
