--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <!--POSTS-->
                 <div class="col-lg-7 col-md-12 rounded-0 bg-light px-4 py-3 ml-3">
 
-                    <div class="row row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit1.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: მოულოდნელი
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="row row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
+                    <div class="row media mb-3 rounded-top navbar-boxshadow px-2 py-2">
                         <img class="img-fluid postImage mr-3" src="images/Articles/Hobbit2.jpg">
                         <div class="media-body bpgNino">
                             <a class="navbar-brand text-dark" href="#"><strong>ჰობიტი: სმაუგის ნაოხარი</strong></a>
